[package]
name = "rgb21"
version = "0.1.0"
license = "MIT"
authors = [
  "Dr Maxim Orlovsky <orlovsky@pandoracore.com>",
  "Federico Tenga <federicotenga@gmail.com>",
  "Zoe Faltibà <zoefaltiba@gmail.com>",
  "Nicola Busanello <nicola.busanello@gmail.com>"
]
description = "RGB-21 Library: fungible digital assets for bitcoin & lightning"
repository = "https://github.com/RGB-Tools/rust-rgb21"
homepage = "https://rgb.network"
keywords = ["bitcoin", "lightning", "rgb", "smart-contracts", "nft"]
categories = ["cryptography::cryptocurrencies"]
readme = "README.md"
edition = "2021"
rust-version = "1.59.0"

[lib]
name = "rgb21"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib"]

[[bin]]
name = "rgb21"
path = "src/bin/rgb21.rs"
required-features = ["cli"]

[dependencies]
amplify = "3.13.0"
strict_encoding = "~0.8.0"
stens = "0.7.1"
lnpbp = "0.8.0"
bp-seals = "0.8.0"
rgb-std = { git = "https://github.com/zoedberg/rgb-std", branch = "fix/rgb_core", version = "0.8.0", features = ["wallet"] }
bitcoin = "0.28.1"
chrono = "0.4"
url = "2.1"
serde_crate = { package = "serde", version = "1", features = ["derive"], optional = true }
serde_with = { version = "1.8", features = ["hex"], optional = true }
serde_yaml = { version = "0.8", optional = true }
serde_json = { version = "1", optional = true }
clap = { version = "~3.1.18", optional = true, features = ["derive", "env"] }
colored = "2.0.0"

[features]
default = []
all = ["serde", "cli"]
serde = ["serde_crate", "serde_with", "lnpbp/serde", "bitcoin/use-serde", "rgb-std/serde", "amplify/serde", "chrono/serde"]
cli = ["clap", "serde", "serde_yaml", "serde_json"]
